# pi-mono

./: AGENTS.md
py-packages/agent/: README.md  __init__.py  example.py  pyproject.toml
py-packages/agent/pi_agent/: __init__.py  agent.py  agent_loop.py  proxy.py  types.py
py-packages/agent/src/: __init__.py  agent.py  agent_loop.py  types.py
py-packages/ai/: README.md  __init__.py  pyproject.toml
py-packages/ai/pi_ai/: __init__.py  api_registry.py  env_api_keys.py  event_stream.py  models.py  models_generated.py  stream.py  types.py
py-packages/ai/pi_ai/providers/: __init__.py  anthropic.py  openai_completions.py  register_builtins.py  simple_options.py  transform_messages.py
py-packages/ai/pi_ai/utils/: json_parse.py  overflow.py  sanitize_unicode.py  typebox_helpers.py  validation.py
py-packages/ai/pi_ai/utils/oauth/: __init__.py  pkce.py  types.py
py-packages/ai/scripts/: generate_models.py
py-packages/ai/src/: __init__.py  api_registry.py  env_api_keys.py  models.py  models_generated.py  stream.py  types.py
py-packages/ai/src/providers/: anthropic.py  google.py  openai.py  register_builtins.py
py-packages/ai/src/utils/: event_stream.py  json_parse.py  sanitize_unicode.py
py-packages/pi-coding-agent/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
py-packages/pi-coding-agent/docs/: architecture.md
py-packages/pi-coding-agent/examples/: basic_usage.py
py-packages/pi-coding-agent/pi_coding_agent/: __init__.py  compaction.py  models.py  session_manager.py
py-packages/pi-coding-agent/scripts/: dev.sh
py-packages/pi-coding-agent/tests/: test_session_manager.py
read-source-docs/: ARCHITECTURE.md
