[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi-agent"
version = "0.1.0"
description = "Python agent framework for LLM-powered applications"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Mario Zechner", email = "contact@badlogicgames.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pi-ai>=0.1.0",
    "pydantic>=2.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["pi_agent"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
