[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi-ai"
version = "0.1.0"
description = "Python AI streaming library for multiple LLM providers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Mario Zechner", email = "contact@badlogicgames.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24",
    "openai>=1.0",
    "anthropic>=0.20",
    "google-generativeai>=0.5",
    "boto3>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["pi_ai"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
